--- a/test/SpecFlow.Flavors.SampleProject/SpecFlow.Flavors.SampleProject.csproj
+++ b/test/SpecFlow.Flavors.SampleProject/SpecFlow.Flavors.SampleProject.csproj
@@ -1,17 +1,20 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <Import Project="..\..\src\SpecFlow.Flavors\build\SpecFlow.Flavors.targets"/>
-  <Import Project="..\..\src\SpecFlow.Flavors\build\SpecFlow.Flavors.props"/>
+  <Import Project="..\..\src\SpecFlow.Flavors\build\SpecFlow.Flavors.targets" />
+  <Import Project="..\..\src\SpecFlow.Flavors\build\SpecFlow.Flavors.props" />
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="SpecFlow" Version="3.0.132-beta" />
-    <PackageReference Include="SpecFlow.Tools.MsBuild.Generation" Version="3.0.132-beta" />
-    <PackageReference Include="SpecFlow.xUnit" Version="3.0.132-beta" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
+    <PackageReference Include="SpecFlow" Version="3.0.154-beta" />
+    <PackageReference Include="SpecFlow.Tools.MsBuild.Generation" Version="3.0.154-beta" />
+    <PackageReference Include="SpecFlow.xUnit" Version="3.0.154-beta" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.1">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
   <PropertyGroup>
